# cio-kubo

./: Cargo.toml  README.md  fluence.yaml  service.yaml
.fluence/: provider-artifacts.yaml  provider-secrets.yaml  workers.yaml
.fluence/aqua/: deals.aqua  services.aqua
.fluence/configs/: nox-0_Config.toml  nox-1_Config.toml  nox-2_Config.toml
modules/: cio-ipfs-effector
modules/cioKubo/src/: main.rs
src/aqua/: main.aqua
src/compiled-aqua/: main.ts
src/services/cioKubo/: README.md
src/services/cioKubo/modules/: cio-ipfs-effector
src/services/cioKubo/modules/cioKubo/: Cargo.toml
src/services/cioKubo/modules/cioKubo/src/: main.rs
