[package]
name = "cioKubo"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "cioKubo"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.14.0", features = ["logger"] }
cio-ipfs-effector-imports = { git = "https://github.com/composibleIO/cio-ipfs-effector", branch = "main" }

[dev-dependencies]
marine-rs-sdk-test = "0.16.1"
